<resources>
	<string name="app_name">Noble Quran</string>
	<string name="menu_warsh">Download Warsh</string>
	<string name="menu_douri">Download Douri</string>
	<string name="menu_qalon">Download Qalon</string>
	<string name="menu_shubah">Download Shubah</string>
	<string name="warsh">Warsh</string>
	<string name="hafs">Hafs</string>
	<string name="douri">Douri</string>
	<string name="qalon">Qalon</string>
	<string name="shubah">Shubah</string>
	<string name="darkmode">Dark Mode</string>
	<string name="lightmode">Light Mode</string>
	<string name="list">Sura/Juz List</string>
	<string name="sura">Sura</string>
	<string name="juz">Juz</string>
	<string name="page">Page</string>
	<string name="goTo">Go To</string>
	<string name="page_hint">Go To Page</string>
	<string name="download_qiraat">Do you want to download qiraat pages (%1$d MB)</string>
	<string name="download_qiraat_completed">Download is completed</string>
	<string name="download_qiraat_finished">Pages are available now, do you want to display it ?</string>
	<string name="download_qiraat_percentage">Downloading is in progress %1$s%%</string>
	<string name="download_qiraat_error">Download is interrupted, error code: %1$d</string>
	<string name="download_qiraat_cancelled">Download is cancelled</string>
	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>
</resources>